<resources>
    <!-- App -->
    <string name="app_name">LeanCloudDemo</string>

    <!-- Action -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_done">done</string>

    <!-- Test -->
    <string name="test">测试</string>
    <string name="test_card_content">我大学老师在上设计课评图的时候说，你们一定要做别人能看懂的设计并且自圆其说。因为人类这种愚蠢的生物对待自己不懂的东西的态度是错愕、愤怒、仇恨，当无计可施、消灭不掉的时候，他们畏惧。</string>
    <string name="test_card_reference">独眼《为什么会对同性恋者感到畏惧？》</string>
    <string name="test_tag">瞎扯</string>
    <string name="test_username">瞎扯君</string>
    <string name="test_int">47</string>
    <string name="test_time">14:47</string>
    <string name="test_date">06月19日 星期五</string>

    <!-- Common -->
    <string name="welcome">欢迎</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="login_hint">没有账号？快来注册吧</string>
    <string name="signup">注册</string>
    <string name="signup_hint">我要登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login_username_empty">请输入用户名</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="input_empty">请输入文字</string>
    <string name="release">发布</string>
    <string name="release_success">发布成功</string>
    <string name="release_failure">发布失败</string>

    <!-- -->
    <string name="avatar_update_success">头像更改成功</string>
    <string name="post_create_title">发布状态</string>

</resources>
